# LuaLab

./: .gitignore  README.md  build_lua_lib.sh
01_HelloWorld/: arg.lua
02_math/: math-floor-ceil-modf.lua  math-maxinteger-mininteger.lua
04_string/: string-len.lua  string-rep.lua  string.lua  string_lib.lua  utf8_lib.lua
05_table/: array.lua  table-insert.lua  table.lua  table_lib.lua  traversing_with_pairs_ipairs.lua
06_function/: function.lua
07_io/: io-lines.lua  os_lib.lua  test_file.lua
08_grammer/: for.lua  local.lua  local_test.lua  while.lua
09_closure/: closure.lua  function_first-class_value.lua  sandbox.lua
10_pattern/: string-gmatch.lua  string-gsub.lua  string-match.lua
12_bit_byte/: string-pack-string-unpack.lua
14_data_structure/: array.lua  matrix.lua
15_datafile_serialize/: bookdata.lua
16_compile_execute_error/: error.lua  load.lua  pcall.lua
17_module/: module_use.lua
20_metatable_metamethod/: __index.lua  arithmetic_metatable.lua  metamethod.lua  setmetatable_getmetable.lua
21_object_oriented/: class.lua
27_c_api/: stack.c
28_c_lua/: CMakeLists.txt  call_luafunction.c  config.lua  load_config.c
29_lua_c/: build.sh  example.c  main.lua
29_lua_c/src/: build.sh  cfunc.c  cfunc.h  main.lua
30_c_skills/: CMakeLists.txt
30_c_skills/src/: main.lua
31_c_class/: CMakeLists.txt
31_c_class/src/: main.cpp  main.lua  vector.cpp
HelloWorld/: dofile.lua  helloworld.lua  type.lua
bit_byte/: bit_operate.lua  string-pack-string-unpack.lua
c_api/: build.sh  interpreter.c
c_class/: CMakeLists.txt
c_class/src/: main.cpp  vector.cpp  vector.hpp
c_skills/src/: main.c
closure/: closure.lua  function_first-class_value.lua  table-sort.lua
compile_execute_error/: assert.lua  loadfile.lua  xpcall.lua
datafile_serialize/: bookentry.lua  serialize.lua
date_time/: os_date.lua  os_time.lua
function/: select.lua  table-pack.lua  table-unpack.lua
grammer/: for.lua  goto.lua  if.lua  local-do-end.lua  local_test.lua  repeat.lua
io/: io-input-output.lua  io-open.lua  io-popen.lua  io-read-write.lua  io-seek.lua  os-execute.lua  os-getenv.lua  os_lib.lua
lua/: CMakeLists.txt
lua_c/: CMakeLists.txt
lua_c/src/: bind_cfunc_example.c  cfunc.c
math/: math-abs.lua  math-floor-ceil-modf.lua  math-max-min.lua  math-random.lua  math-type.lua
metatable_metamethod/: __index.lua  __index2.lua  __newindex.lua  setmetatable_getmetable.lua
module/: module_example.lua
object_oriented/: inheritance.lua
pattern/: pattern.lua  string-find.lua  string-gsub.lua  string-match.lua
string/: string-byte.lua  string-char.lua  string-format.lua  string-lower-upper.lua  string-reverse.lua  string-sub.lua  string.lua  tonumber.lua  utf8_lib.lua
table/: table-concat.lua  table-move.lua  table-remove.lua  table.lua  table_lib.lua
utility/: baseclass_test.lua  clone.lua  clone_test.lua  idallocator.lua  idallocator_test.lua  instance.lua  instance_test.lua  serializer.lua  serializer_test.lua  small_functions.lua  small_functions_test.lua  stringcommon.lua  system.lua
