CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(liblua)

if (MSVC)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
else()
	SET(CMAKE_CXX_FLAGS "-g -Wall")
    target_compile_options(lua PRIVATE "-DLUA_USE_MKSTEMP")
endif(MSVC)

FILE(GLOB_RECURSE SRC_FILES "${PROJECT_SOURCE_DIR}/*")

add_definitions(-DLUA_LIB -DLUA_BUILD_AS_DLL)

ADD_LIBRARY(lua STATIC ${SRC_FILES})
