CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(liblua)

FILE(GLOB_RECURSE SRC_FILES "${PROJECT_SOURCE_DIR}/*")

ADD_LIBRARY(lua SHARED ${SRC_FILES})

if (MSVC)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MTd")
	add_definitions(-DLUA_LIB -DLUA_BUILD_AS_DLL)
else()
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall")
	target_compile_options(lua PRIVATE "-DLUA_USE_MKSTEMP")
endif(MSVC)
